--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-# requirements.txt - Version compatible Python 3.13
 streamlit==1.29.0
-pandas==2.2.0
-numpy==1.26.4
+pandas
+numpy
 plotly==5.18.0
-scipy==1.13.0
-scikit-learn==1.5.0
-streamlit-extras==0.3.6
 openpyxl==3.1.2
 xlsxwriter==3.1.9
-seaborn==0.13.2
-matplotlib==3.8.3
+build-essential
